objects/Account.object
<CustomObject>
    <fields>
        <fullName>Code_Signing_Audit_Statement_Date__c</fullName>
        <description>Date Code Signing Audit Statement Issued</description>
        <inlineHelpText>Date Code Signing Audit Statement Issued</inlineHelpText>
        <label>Code Signing Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Audit_Type__c</fullName>
        <label>Code Signing Audit Type</label>
        <picklist>
            <picklistValues>
                <fullName>WebTrust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETSI EN 319 411</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETSI TS 102 042</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equivalent WebTrust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equivalent ETSI EN 319 411</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equivalent ETSI 102 042</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Audit_Update_Message__c</fullName>
        <label>Code Signing Audit Update Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Audit_Update_Status__c</fullName>
        <label>Code Signing Audit Update Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Processed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Audit__c</fullName>
        <label>Code Signing Audit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Deviation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Issues or qualifications noted in audit statement</inlineHelpText>
        <label>Code Signing Audit Deviation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_Signing_Statement_Internal_Link__c</fullName>
        <label>Code Signing Statement (Internal Link)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_by_Mozilla_on_Intermediate__c</fullName>
        <label>Comments by Mozilla on Intermediate</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_by_Mozilla_on_Owner__c</fullName>
        <label>Comments by Mozilla on Owner</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_by_Mozilla_on_Root__c</fullName>
        <label>Comments by Mozilla on Root</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Website_From_Owner_Record__c</fullName>
        <formula>Parent.Company_Website__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Website__c</fullName>
        <inlineHelpText>Website URL</inlineHelpText>
        <label>Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Revocation_GMT__c</fullName>
        <description>This formula field converts regular date field to display date in YYYY MMM DD format. Eg: &quot;7/9/1999&quot; shows as &quot;1999 Jul 09&quot;</description>
        <formula>IF (NOT ISBLANK(Date_of_Revocation__c), 
TEXT(YEAR(Date_of_Revocation__c)) &amp; &quot; &quot; &amp; 
CASE(MONTH(Date_of_Revocation__c), 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, 
NULL) &amp; &quot; &quot; &amp; 
IF (LEN(TEXT(DAY(Date_of_Revocation__c))) = 1,&quot;0&quot; &amp; TEXT(DAY(Date_of_Revocation__c)),TEXT(DAY(Date_of_Revocation__c))), 
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Revocation [GMT]</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Revocation__c</fullName>
        <label>Date of Revocation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deprecated_Previous_CA_Owner__c</fullName>
        <inlineHelpText>History Tracking will save the CA Owner Name</inlineHelpText>
        <label>Deprecated: Previous CA Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deprecated_Previous_Owner_Change_Date__c</fullName>
        <inlineHelpText>History Tracking will save the CA Owner change date</inlineHelpText>
        <label>Deprecated: Previous Owner Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_PEM_Info_Warning_Message__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display PEM Info Warning Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Warning_or_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by VF page to display warnings or messages</description>
        <label>Display Warning or Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Webservice_Failed_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Account trigger helper class</description>
        <label>Display Webservice Failed Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Webservice_Not_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Account trigger helper class</description>
        <label>Display Webservice Not Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_NOT_Send_Audit_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, Audit Reminder for Mozilla process will ignore this Root Cert. Only to be used by CA Program Manager.</inlineHelpText>
        <label>Do NOT Send Audit Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Period_End_Date__c</fullName>
        <inlineHelpText>End date of the period of time of CA operations examined by the auditor. Audit Periods must not exceed one year in duration and must be contiguous.</inlineHelpText>
        <label>EV SSL Audit Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Period_Start_Date__c</fullName>
        <inlineHelpText>Start date of the period of time of CA operations examined by the auditor.</inlineHelpText>
        <label>EV SSL Audit Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Statement_Date__c</fullName>
        <description>Date EV SSL Audit Statement Issued</description>
        <inlineHelpText>Date EV SSL Audit Statement Issued</inlineHelpText>
        <label>EV SSL Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Statement_Internal_Link__c</fullName>
        <label>EV SSL Audit Statement (Internal Link)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Type__c</fullName>
        <label>EV SSL Audit Type</label>
        <picklist>
            <picklistValues>
                <fullName>WebTrust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETSI EN 319 411</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETSI TS 102 042</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equivalent WebTrust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equivalent ETSI EN 319 411</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equivalent ETSI 102 042</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Update_Message__c</fullName>
        <label>EV SSL Audit Update Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_Audit_Update_Status__c</fullName>
        <label>EV SSL Audit Update Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Processed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_Audit__c</fullName>
        <description>If able to issue EV certs, then URL to EV audit statement. Documents may be attached to Bugzilla Bugs as described here https://wiki.mozilla.org/CA:SalesforceCommunity#Documents.</description>
        <inlineHelpText>If able to issue EV certs, then URL to EV audit statement. Documents may be attached to Bugzilla Bugs as described here https://wiki.mozilla.org/CA:SalesforceCommunity#Documents.</inlineHelpText>
        <label>EV SSL Audit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit_Period_End_Date__c</fullName>
        <inlineHelpText>End date of the period of time of CA operations examined by the auditor. Audit Periods must not exceed one year in duration and must be contiguous.</inlineHelpText>
        <label>EV Code Signing Audit Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit_Period_Start_Date__c</fullName>
        <inlineHelpText>Start date of the period of time of CA operations examined by the auditor.</inlineHelpText>
        <label>EV Code Signing Audit Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit_Statement_Date__c</fullName>
        <inlineHelpText>Date EV Code Signing Audit Statement Issued</inlineHelpText>
        <label>EV Code Signing Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit_Stmt_Int_Link__c</fullName>
        <label>EV Code Signing Audit Stmt (Int Link)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit_Type__c</fullName>
        <label>EV Code Signing Audit Type</label>
        <picklist>
            <picklistValues>
                <fullName>WebTrust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETSI EN 319 411</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETSI TS 102 042</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equivalent WebTrust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equivalent ETSI EN 319 411</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equivalent ETSI 102 042</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit_Update_Message__c</fullName>
        <label>EV Code Signing Audit Update Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit_Update_Status__c</fullName>
        <label>EV Code Signing Audit Update Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Processed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Audit__c</fullName>
        <label>EV Code Signing Audit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_Code_Signing_Deviation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Issues or qualifications noted in audit statement</inlineHelpText>
        <label>EV Code Signing Audit Deviation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_Policy_OID_s__c</fullName>
        <label>Mozilla EV Policy OID(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_SSL_Deviation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Issues or qualifications noted in audit statement</inlineHelpText>
        <label>EV SSL Audit Deviation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extended_Key_Usage_OLD__c</fullName>
        <label>Extended Key Usage OLD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extended_Key_Usage__c</fullName>
        <label>Extended Key Usage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extraction_Results_OLD__c</fullName>
        <label>Extraction Results OLD</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extraction_Results__c</fullName>
        <label>Extraction Results</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Firefox_Release_When_First_Included__c</fullName>
        <label>Firefox Release When First Included</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firefox_Release_When_Removed__c</fullName>
        <label>Firefox Release When Removed</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friendly_Name__c</fullName>
        <label>Friendly Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Geographic_Focus_255_char__c</fullName>
        <description>This field shows first 255 characters of long type Geographic Focus</description>
        <inlineHelpText>This field shows first 255 characters of long type Geographic Focus</inlineHelpText>
        <label>Geographic Focus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Geographic_Focus__c</fullName>
        <label>Geographic Focus</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Geographic_Focus_of_Owner__c</fullName>
        <formula>Parent.Geographic_Focus_255_char__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geographic Focus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>CASE($RecordType.Name, 
&quot;CA Owner&quot;, &quot;CAs cannot directly modify data for their CA Owner records, because the data must first be verified by a root store operator.&quot; &amp; BR() &amp; &quot;Follow the instructions here: http://ccadb.org/cas/updates to create an Audit Case and corresponding Audit Root Cases to provide your annual updates to audit, CP/CPS, and test website URLs. At that time you can also update the CAA Domains and Problem Reporting Mechanism. If you need to update this data more frequently, contact your root store operator.&quot;, 
&quot;Root Certificate&quot;, &quot;CAs cannot directly modify data for their root certificate records, because the data must first be verified by a root store operator.&quot; &amp; BR() &amp; &quot;Follow the instructions here: http://ccadb.org/cas/updates to create an Audit Case and corresponding Audit Root Cases to provide your annual updates to audit, CP/CPS, and test website URLs.&quot;, 
&quot;&quot;)</defaultValue>
        <label>Instructions</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inter_Cert_Owned_By_Internal_User__c</fullName>
        <formula>IF(IsBlank(Owner.ContactId), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True - Record is owned is an internal user
False - Record is owned by community user</inlineHelpText>
        <label>Inter Cert Owned By Internal User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Parent_Revoked__c</fullName>
        <formula>IF ( ISPICKVAL(Parent.Revocation_Status__c, &quot;Revoked&quot;), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Parent Revoked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issuer_OLD__c</fullName>
        <label>Issuer OLD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issuer_Serial_Number__c</fullName>
        <formula>&quot;[&quot; + Certificate_Issuer_Common_Name__c + &quot;][&quot; + Certificate_Issuer_Organization__c + &quot;][&quot; + Certificate_Issuer_Organizational_Unit__c + &quot;][&quot; + Certificate_Serial_Number__c + &quot;]&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issuer + Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issuer__c</fullName>
        <inlineHelpText>Certificate Issuer Common Name + Certificate Issuer Organizational Unit + Certificate Issuer Organization + Certificate Issuer Country</inlineHelpText>
        <label>Issuer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issuer_with_nulls__c</fullName>
        <inlineHelpText>To be deleted</inlineHelpText>
        <label>Issuer (with nulls)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Usage_OLD__c</fullName>
        <label>Key Usage OLD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Usage__c</fullName>
        <label>Key Usage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Case_No__c</fullName>
        <inlineHelpText>Updated by Sync process</inlineHelpText>
        <label>Last Sync Case No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Date_Time__c</fullName>
        <inlineHelpText>Updated by Sync process</inlineHelpText>
        <label>Last Sync Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LinksToPublicInterCertsForEachCAOwner__c</fullName>
        <formula>&apos;| [&apos; + HYPERLINK(&apos;https://mozillacaprogram.secure.force.com/CA/PublicIntermediateCerts?CAOwnerName=&apos; + SUBSTITUTE(Name,&quot; &quot;,&quot;%20&quot;), &apos;https://mozillacaprogram.secure.force.com/CA/PublicIntermediateCerts?CAOwnerName=&apos; + SUBSTITUTE(Name,&quot; &quot;,&quot;%20&quot;)) + &apos; &apos; + Name + &apos;] || [&apos; + HYPERLINK(&apos;https://mozillacaprogram.secure.force.com/CA/PublicIntermediateCertsCSVFormat?CAOwnerName=&apos; + SUBSTITUTE(Name,&quot; &quot;,&quot;%20&quot;), &apos;https://mozillacaprogram.secure.force.com/CA/PublicIntermediateCertsCSVFormat?CAOwnerName=&apos; + SUBSTITUTE(Name,&quot; &quot;,&quot;%20&quot;)) + &apos; &apos; + Name +&apos;]&apos; + BR() + &apos;|-&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula field is used to generate hyperlinks to PublicIntermediateCerts &amp; PublicIntermediateCertsCSVFormat reports for each CA Owner which are passed as url parameters.  These links are added to Mozilla website.</inlineHelpText>
        <label>LinksToPublicInterCertsForEachCAOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Assertions_By__c</fullName>
        <description>The name (in English) of the organization who made the management assertions for the standard audit. i.e. The name of the organization that validates the data to be included in certificates signed by this issuer.</description>
        <inlineHelpText>The name (in English) of the organization who made the management assertions for the standard audit. i.e. The name of the organization that validates the data to be included in certificates signed by this issuer.</inlineHelpText>
        <label>DELETE Management Assertions By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Match_Running_User_s_Owner__c</fullName>
        <description>Match the Account Name with the Account Name of the Contact (running user). Make exception for Symantec and sister companies.</description>
        <formula>IF (AND (BEGINS (CA_Owner__c, &apos;Symantec&apos;), BEGINS (CA_Owner_for_Running_User__c, &apos;Symantec&apos;)), TRUE,
   IF (CA_Owner__c = CA_Owner_for_Running_User__c, TRUE, FALSE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Running User&apos;s Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_on_Cert_Name_and_SubjectCN__c</fullName>
        <formula>IF ( Name = Certificate_Subject_Common_Name__c, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match on  Cert Name and SubjectCN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_on_Parent_and_IssuerCN__c</fullName>
        <formula>IF (Parent.Name = Certificate_Issuer_Common_Name__c, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match on Parent and IssuerCN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MicrosoftAuditAlertEmailTxtBetn365And446__c</fullName>
        <formula>Microsoft_Audit_Alert_Betn365And446Days__c + BR() + 
&apos;CA Owner Name : &apos; + Parent.Name + BR() + 
&apos;Root Certificate Name : &apos; + Name + BR() + 
&apos;Standard Audit Date (mm/dd/yyyy): &apos; + IF(ISBLANK(Standard_Audit_Statement_Date__c ),&apos;null&apos;, TEXT(MONTH(Standard_Audit_Statement_Date__c)) + &apos;/&apos; &amp; TEXT(DAY(Standard_Audit_Statement_Date__c)) + &apos;/&apos; + TEXT(YEAR(Standard_Audit_Statement_Date__c))) + BR() + 
&apos;BR Audit Date (mm/dd/yyyy): &apos; + IF(ISBLANK(BR_Audit_Statement_Date__c),&apos;null&apos;, TEXT(MONTH(BR_Audit_Statement_Date__c)) + &apos;/&apos; + TEXT(DAY(BR_Audit_Statement_Date__c)) + &apos;/&apos; + TEXT(YEAR(BR_Audit_Statement_Date__c))) + BR() + 
&apos;EV Audit Date (mm/dd/yyyy): &apos; + IF(ISBLANK(EV_Audit_Statement_Date__c),&apos;null&apos;, TEXT(MONTH(EV_Audit_Statement_Date__c)) + &apos;/&apos; + TEXT(DAY(EV_Audit_Statement_Date__c)) + &apos;/&apos; + TEXT(YEAR(EV_Audit_Statement_Date__c))) + BR() + 
&apos;Microsoft EV Enable: &apos; + IF(Microsoft_EV_Enabled__c = TRUE, &apos;TRUE&apos;, &apos;FALSE&apos;) + BR() + 
&apos;Microsoft Trust Bits: &apos; + IF(INCLUDES(Microsoft_Trust_Bits__c, &apos;Server Authentication&apos;), &apos;Includes WebSite Authentication&apos;, &apos;Does not include WebSite Authentication&apos;) + BR() + 
&apos;SHA-1 Fingerprint: &apos; + SHA_1_Fingerprint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Betn365And446Days</inlineHelpText>
        <label>MicrosoftAuditAlertEmailTxtBetn365And446</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MicrosoftAuditAlertEmailTxtOver446Days__c</fullName>
        <formula>Microsoft_Audit_Alert_Over_446_Days__c + BR() + 

&apos;CA Owner Name : &apos; + Parent.Name + BR() + 

&apos;Root Certificate Name : &apos; + Name + BR() + 

&apos;Standard Audit Period End Date (mm/dd/yyyy): &apos; + IF(ISBLANK(Standard_Audit_Period_End_Date__c ),&apos;null&apos;, TEXT(MONTH(Standard_Audit_Period_End_Date__c)) + &apos;/&apos; &amp; TEXT(DAY(Standard_Audit_Period_End_Date__c)) + &apos;/&apos; + TEXT(YEAR(Standard_Audit_Period_End_Date__c))) + BR() + 

&apos;Code Signing Audit Period End Date (mm/dd/yyyy): &apos; + 
IF(ISBLANK(Code_Signing_Audit_Period_End_Date__c),&apos;null&apos;, 
TEXT(MONTH(Code_Signing_Audit_Period_End_Date__c)) + &apos;/&apos; + 
TEXT(DAY(Code_Signing_Audit_Period_End_Date__c)) + &apos;/&apos; + 
TEXT(YEAR(Code_Signing_Audit_Period_End_Date__c))) + BR() + 

&apos;BR Audit Period End Date (mm/dd/yyyy): &apos; + 
IF(ISBLANK(BR_Audit_Period_End_Date__c),&apos;null&apos;, 
TEXT(MONTH(BR_Audit_Period_End_Date__c)) + &apos;/&apos; + 
TEXT(DAY(BR_Audit_Period_End_Date__c)) + &apos;/&apos; + 
TEXT(YEAR(BR_Audit_Period_End_Date__c))) + BR() + 

&apos;EV SSL Audit Period End Date (mm/dd/yyyy): &apos; + IF(ISBLANK(EV_Audit_Period_End_Date__c),&apos;null&apos;, 
TEXT(MONTH(EV_Audit_Period_End_Date__c)) + &apos;/&apos; + 
TEXT(DAY(EV_Audit_Period_End_Date__c)) + &apos;/&apos; + 
TEXT(YEAR(EV_Audit_Period_End_Date__c))) + BR() + 

&apos;EV Code Signing Audit Period End Date (mm/dd/yyyy): &apos; + IF(ISBLANK(EV_Code_Signing_Audit_Period_End_Date__c),&apos;null&apos;, 
TEXT(MONTH(EV_Code_Signing_Audit_Period_End_Date__c)) + &apos;/&apos; + 
TEXT(DAY(EV_Code_Signing_Audit_Period_End_Date__c)) + &apos;/&apos; + 
TEXT(YEAR(EV_Code_Signing_Audit_Period_End_Date__c))) + BR() + 

/* &apos;Microsoft EV Enable: &apos; + IF(Microsoft_EV_Enabled__c = TRUE, &apos;True&apos;, &apos;False&apos;) + BR() + 
&apos;Microsoft Trust Bits: &apos; + IF(INCLUDES(Microsoft_Trust_Bits__c,&quot;Server Authentication&quot;), &apos;Server Authentication; &apos;, &apos;&apos;) + IF(INCLUDES(Microsoft_Trust_Bits__c,&quot;Code Signing&quot;), &apos;Code Signing; &apos;, &apos;&apos;) + BR() + */
&apos;SHA-1 Fingerprint: &apos; + SHA_1_Fingerprint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MicrosoftAuditAlertEmailTxtOver446Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Microsoft_Audit_Alert_Betn365And446Days__c</fullName>
        <description>** NEW VERSION + 90 days logic ** Any changes done to this field could impact email text for &apos;Microsoft&apos;s Audit Reminder&apos; process.</description>
        <formula>/* Process Root Certs with Status = Included or Change Requested */ 
IF(AND(Record_Type_Name__c = &apos;Root Certificate&apos;,OR(ISPICKVAL(Microsoft_Status__c, &apos;Included&apos;), 
ISPICKVAL(Microsoft_Status__c, &apos;Change Requested&apos;))), 

/* If Trust Bits contains Server Authentication (Root enabled for TLS) - check for Std, BR and EV dates */ 
IF(INCLUDES(Microsoft_Trust_Bits__c, &apos;Server Authentication&apos;), 

/* Check for Standard Audit Date */ 
IF(OR(ISBLANK(Standard_Audit_Statement_Date__c), AND (Standard_Audit_Statement_Date__c + 365 &gt; TODAY(), Standard_Audit_Statement_Date__c + 365 + 90 &lt; TODAY())), &apos;Audit Alert : Standard Audit Date Null or Less than 90 days past due&apos;, 

/* Std Audit Date ok; Check for BR Audit Date */ 
IF(OR(ISBLANK(BR_Audit_Statement_Date__c), AND (BR_Audit_Statement_Date__c + 365 &gt; TODAY(), BR_Audit_Statement_Date__c + 365 + 90 &lt; TODAY())), &apos;Audit Alert : Standard Audit Date ok, Root enabled for TLS, but the BR Audit Date Null or Less than 90 days past due&apos;, 

/* Std &amp; BR ok; Check for EV Audit Date only if EV Enabled */ 
IF(Microsoft_EV_Enabled__c = TRUE, 
IF(OR(ISBLANK(EV_Audit_Statement_Date__c), AND (EV_Audit_Statement_Date__c + 365 &gt; TODAY(), EV_Audit_Statement_Date__c + 365 + 90 &lt; TODAY())),&apos;Audit Alert : Standard Audit Date ok, BR Audit Date ok, root enabled for EV, but the EV audit Date Null or Less than 90 days past due&apos;, 

/* No alerts */ 
&apos;No Audit Alert : Standard Audit Date ok, BR Audit Date ok, EV Audit Dates ok&apos;), 
&apos;No Audit Alert : Standard Audit Date ok, BR Audit Date ok, EV not enabled&apos;))), 
&apos;No Audit Alert : Microsoft Trust Bits Does Not Includes Server Authentication&apos;) , 
&apos;No Audit Alert : Type&lt;&gt;Root;Status&lt;&gt;Included;Status&lt;&gt;Change Requested&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** NEW VERSION + 90 days logic **  TDB -&gt; This field determines if the audits are due. It is used to generate Microsoft Audit Report.</inlineHelpText>
        <label>Microsoft Audit Alert Betn365And446Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Microsoft_Audit_Alert_Count_Alerts__c</fullName>
        <formula>IF(AND (LEFT(Microsoft_Audit_Alert_Over_446_Days__c, 98) = &quot;Trust Bits has Code Signing but Code Signing Audit Period End Date is Null or Over 90 days past due&quot;, RIGHT(Microsoft_Audit_Alert_Over_446_Days__c, 98)= &quot;Trust Bits has Code Signing but Code Signing Audit Period End Date is Null or Over 90 days past due&quot;), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only used in report &quot;Microsoft Audit Alert Over 446 Days&quot;</inlineHelpText>
        <label>Microsoft Audit Alert - Count Alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Microsoft_Audit_Alert_Email_Text__c</fullName>
        <description>Any changes done to this field could impact email text for &apos;Microsoft&apos;s Audit Reminder&apos; process.</description>
        <formula>Microsoft_Audit_Alert__c + BR() + 
&apos;CA Owner Name : &apos; + Parent.Name + BR() + 
&apos;Root Certificate Name : &apos; + Name + BR() + 
&apos;Standard Audit Date (mm/dd/yyyy): &apos; + IF(ISBLANK(Standard_Audit_Statement_Date__c ),&apos;null&apos;, TEXT(MONTH(Standard_Audit_Statement_Date__c)) + &apos;/&apos; &amp; TEXT(DAY(Standard_Audit_Statement_Date__c)) + &apos;/&apos; + TEXT(YEAR(Standard_Audit_Statement_Date__c))) + BR() + 
&apos;BR Audit Date (mm/dd/yyyy): &apos; + IF(ISBLANK(BR_Audit_Statement_Date__c),&apos;null&apos;, TEXT(MONTH(BR_Audit_Statement_Date__c)) + &apos;/&apos; + TEXT(DAY(BR_Audit_Statement_Date__c)) + &apos;/&apos; + TEXT(YEAR(BR_Audit_Statement_Date__c))) + BR() + 
&apos;EV Audit Date (mm/dd/yyyy): &apos; + IF(ISBLANK(EV_Audit_Statement_Date__c),&apos;null&apos;, TEXT(MONTH(EV_Audit_Statement_Date__c)) + &apos;/&apos; + TEXT(DAY(EV_Audit_Statement_Date__c)) + &apos;/&apos; + TEXT(YEAR(EV_Audit_Statement_Date__c))) + BR() + 
&apos;Microsoft EV Enable: &apos; + IF(Microsoft_EV_Enabled__c = TRUE, &apos;TRUE&apos;, &apos;FALSE&apos;) + BR() + 
&apos;Microsoft Trust Bits: &apos; + IF(INCLUDES(Microsoft_Trust_Bits__c, &apos;Server Authentication&apos;), &apos;Includes WebSite Authentication&apos;, &apos;Does not include WebSite Authentication&apos;) + BR() + 
&apos;SHA-1 Fingerprint: &apos; + SHA_1_Fingerprint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field forms text message for audits email. Also used in Microsoft Audit Report.</inlineHelpText>
        <label>Microsoft Audit Alert Email Text</label>
        <type>Text</type>
    </fields>
</CustomObject>